Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -537,16 +537,14 @@ colors = [<span class="string">"red"</span>, <span class="string">"green"</span>
                     <span class="section-badge">Creator</span>
                     <h2 class="about-title">Abdullah Masood</h2>
                     <p class="about-description">
-                        A passionate software developer dedicated to making programming more accessible.
-                        EZ Language was created with a simple vision: to provide beginners with a
-                        programming language that's truly easy to learn while still being powerful
-                        enough for real projects.
+                        I’m a Computer Science student with a strong passion for making programming more accessible.
+                        I created EZ Language with a simple vision: to provide beginners with a programming language
+                        that is truly easy to learn while still being powerful enough for real-world projects.
                     </p>
                     <p class="about-description">
-                        The goal is to remove barriers that often discourage new programmers -
-                        complicated syntax, cryptic error messages, and steep learning curves.
-                        With EZ, you can focus on learning programming concepts without getting
-                        lost in the details.
+                        The goal of EZ is to remove common barriers that discourage new programmers—complicated syntax,
+                        confusing error messages, and steep learning curves. With EZ, learners can focus on understanding
+                        core programming concepts instead of getting lost in unnecessary details.
                     </p>
                     <div class="about-links">
                         <a href="https://github.com/imabd645/EZ-language" class="btn btn-primary" target="_blank">
@@ -643,5 +641,6 @@ colors = [<span class="string">"red"</span>, <span class="string">"green"</span>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
