--- a/instructions.html
+++ b/instructions.html
@@ -481,9 +481,9 @@ names = [<span class="string-highlight">"Alice"</span>, <span class="string-high
 
 <span class="keyword-highlight">when</span> op <span class="keyword-highlight">equal</span> <span class="string-highlight">"+"</span> {
     <span class="keyword-highlight">out</span> num1 + num2
-} <span class="keyword-highlight">other</span> <span class="keyword-highlight">when</span> op <span class="keyword-highlight">equal</span> <span class="string-highlight">"-"</span> {
+} <span class="keyword-highlight">when</span> op <span class="keyword-highlight">equal</span> <span class="string-highlight">"-"</span> {
     <span class="keyword-highlight">out</span> num1 - num2
-} <span class="keyword-highlight">other</span> <span class="keyword-highlight">when</span> op <span class="keyword-highlight">equal</span> <span class="string-highlight">"*"</span> {
+} <span class="keyword-highlight">when</span> op <span class="keyword-highlight">equal</span> <span class="string-highlight">"*"</span> {
     <span class="keyword-highlight">out</span> num1 * num2
 } <span class="keyword-highlight">other</span> {
     <span class="keyword-highlight">out</span> num1 / num2
@@ -496,12 +496,13 @@ names = [<span class="string-highlight">"Alice"</span>, <span class="string-high
     <footer class="footer">
         <div class="container">
             <div class="footer-bottom">
-                <p>&copy; 2024 EZ Language. Created by Abdullah Masood. Licensed under MIT.</p>
+                <p>&copy; 2025 EZ Language. Created by Abdullah Masood. Licensed under MIT.</p>
             </div>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
